# titso

./: .gitignore  Dockerfile  Procfile  README.md  stack.yaml  titso.cabal
.stack-work/install/x86_64-osx/lts-8.9/8.0.2/flag-cache/: ghc-paths-0.1.0.9-AhaDlGOsRAepox069XzG  haskeline-0.7.3.1-19q6LHqZ5xHeU9qD4pnHO  intero-0.1.20  syb-0.6-IcoSwlPi2Nx4zSqMmorFPS
.stack-work/install/x86_64-osx/lts-8.9/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHStitso-0.1.0.0-4X5CLHJMfSlKdlBKpZg1KS-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-8.9/8.0.2/lib/x86_64-osx-ghc-8.0.2/titso-0.1.0.0-4X5CLHJMfSlKdlBKpZg1KS/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-8.9/8.0.2/pkgdb/: package.cache  titso-0.1.0.0-4X5CLHJMfSlKdlBKpZg1KS.conf
app/: Main.hs
src/: Lib.hs  Server.hs
