name:                titso
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dimarwix/titso
license:             BSD3
license-file:        LICENSE
author:              Dima Ryskin
maintainer:          example@example.com
copyright:           2017 Dima Ryskin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , acme-missiles
                     , scotty
  default-language:    Haskell2010

executable titso-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , titso
                     , scotty
  default-language:    Haskell2010

test-suite titso-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , titso
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/titso
